# recan-veracity-classification

./: .gitignore  LICENSE  README.md  dry_run.py  pyproject.toml  single_model.py  train.py
recan-veracity-classification/: train.py
recan-veracity-classification/models/: coattention_module.py  recan.py  recan_lstm.py  transformer.py
recan_veracity_classification/: __init__.py
recan_veracity_classification/model/: coattention_module.py  recan.py  transformer.py
recan_veracity_classification/preprocessing/: language_model.py  pheme_data.py  pheme_helpers.py
